# ai-shorts

./: .gitignore  README.md  combine_vids.py  environment.cuda.yml  environment.yml  generate.py  pyproject.toml  requirements.txt
SadTalker/src/face3d/util/: my_awing_arch.py
SadTalker/src/facerender/: animate.py
Wav2Lip/: inference.py
app/: pipeline.py
app/audio/: tts.py
app/utils/: io.py
app/video/: assemble.py  compress.py  face_swap.py  montage.py  talking_head.py
examples/: spec_sample.json
examples/f1/: spec_sample.json
examples/pol/: spec_sample.json  spec_sample_2.json  spec_sample_3.json  spec_sample_4.json  spec_sample_5.json
examples/pol/assets/: spec_sample.json
runs/3687427b/: s1.srt
runs/37668eeb/: s1.srt
runs/99f74c26/: spec.json
runs/_latest/: s1.srt
runs/a05af18e/: s1.srt  spec.json
runs/acabf118/: s1.srt
runs/demo/: s1.srt
runs/e51440fa/: s1.srt
runs/fabb7a55/: spec.json
scripts/: download_piper_voice.py  setup_macos.sh  setup_windows.bat  setup_windows.ps1
web/: server.py
web/templates/: index.html
