[project]
name = "ai-shorts"
version = "0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "piper-tts (==1.3.0)",
    "opencv-python (==4.12.0.88)",
    "scipy (==1.16.1)",
    "numpy (==2.2.0)",
    "flask (==3.1.2)",
    "iou (==0.1.0)",
    "librosa (==0.11.0)",
    "python-speech-features (==0.6)",
    "tqdm (==4.67.1)",
    "boto3 (>=1.40.20,<2.0.0)",
    "funcy (>=2.0,<3.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "einops (>=0.8.1,<0.9.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "tokenizers (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
